# fctools

./: .gitattributes  Cargo.toml  README.md
src/: arguments.rs  configuration.rs  executor.rs  installation.rs  lib.rs  models.rs  process.rs  process_spawner.rs  response.rs  runner.rs  shell.rs  shell_spawner.rs  sys.rs  syscall.rs  vm.rs  vm_process.rs  vmm_process.rs
src/executor/: argument_modifier.rs  arguments.rs  command_modifier.rs  installation.rs  jailed.rs  mod.rs  unrestricted.rs
src/ext/: fcnet.rs  grpc_vsock.rs  http_vsock.rs  hyper_vsock.rs  link_local.rs  metrics.rs  mod.rs  nat.rs  serial_console.rs  snapshot_editor.rs  vsock_http.rs
src/extension/: grpc_vsock.rs  http_vsock.rs  link_local.rs  metrics.rs  mod.rs  snapshot_editor.rs
src/fs_backend/: blocking.rs  mod.rs  proxy.rs  thread_bridge.rs  tokio_uring.rs  unsend_proxy.rs
src/runtime/: chownr.rs  mod.rs  smol.rs  tokio.rs  util.rs
src/vm/: api.rs  configuration.rs  mod.rs  models.rs  paths.rs  shutdown.rs  snapshot.rs
src/vmm/: id.rs  installation.rs  mod.rs  ownership.rs  process.rs  process_handle.rs  resource.rs
src/vmm/arguments/: command_modifier.rs  firecracker.rs  jailer.rs  mod.rs
src/vmm/executor/: either.rs  handle.rs  jailed.rs  mod.rs  process_handle.rs  unrestricted.rs
src/vmm/executor/jailed/: mod.rs  renamer.rs
src/vmm/resource/: created.rs  detached.rs  internal.rs  mod.rs  moved.rs  path.rs  produced.rs  set.rs  system.rs  template.rs
src/vmm/resource_v3/: bus.rs  handle.rs  internal.rs  mod.rs  pointer.rs  set.rs  system.rs
src/vmm_executor/: arguments.rs  command_modifier.rs  jailed.rs  mod.rs  unrestricted.rs
testdata/: config.json  debian.ext4  debian_build_script.toml  firecracker  jail-config.json  jailer  options.json  snapshot-editor
testdata/assets/: build_script.toml  kernel  rootfs.ext4
testdata/assets/rootfs_build/: build.toml  grpc-guest-agent  http-guest-agent
testdata/configs/: jailed.json  unrestricted.json
testdata/toolchain/: fcnet  fcnetd  firecracker  firecracker-wrong-version  jailer  snapshot-editor
tests/: common.rs  executor.rs  extensions.rs  grpc_codegen.rs  installation.rs  jailed_executor.rs  other.rs  process.rs  resource_tmp.rs  shell_spawner.rs  smol.rs  test_framework.rs  unrestricted_executor.rs  utils.rs  vm.rs  vm_api.rs  vm_process.rs  vmm_process.rs
