[package]
name = "fctools"
version = "0.6.0"
edition = "2021"
description = "An exhaustive, highly modular and extensible host SDK for the Firecracker microVM manager."
license = "MIT"
keywords = ["firecracker", "microvm", "sdk"]
categories = ["virtualization"]
repository = "https://github.com/kanpov/fctools"
readme = "README.md"
exclude = ["/testdata", ".gitattributes", ".gitignore", ".rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
debug = false
strip = "debuginfo"
panic = "abort"
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
strip = "symbols"

[profile.bench.build-override]
opt-level = 3
strip = "symbols"

[dependencies]
# common
thiserror = "1.0.69"
futures-io = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
async-once-cell = "0.5.4"
futures-channel = { version = "0.3.31", default-features = false }
nix = { version = "0.29.0", features = ["user", "fs", "process", "signal"] }
# tokio runtime
tokio-util = { version = "0.7.12", default-features = false, features = [
    "compat",
], optional = true }
tokio = { version = "1.41.1", default-features = false, features = [
    "rt",
    "process",
    "fs",
], optional = true }
# process
hyper = { version = "1.5.0", features = ["client"], optional = true }
bytes = { version = "1.8.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
hyper-client-sockets = { version = "0.2.0", optional = true }
hyper-util = { version = "0.1.10", features = [
    "client-legacy",
    "client",
    "http1",
], optional = true }
http = { version = "1.1.0", optional = true }
# vm
serde = { version = "1.0.214", features = ["derive"], optional = true }
serde_json = { version = "1.0.132", optional = true }
# extensions
cidr = { version = "0.3.0", optional = true }
tonic = { version = "0.12.3", optional = true, default-features = false, features = [
    "transport",
] }
tower-service = { version = "0.3.3", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
rand = "0.8.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
which = "7.0.0"
fcnet-types = { version = "0.1.0", features = ["simple", "namespaced"] }
fcnet = { version = "0.6.0", features = ["simple", "namespaced"] }

fctools = { path = ".", features = ["full"] }
file-lock = "2.1.11"

[features]
full = [
    "tokio-runtime",
    "vm",
    "direct-process-spawner",
    "elevation-process-spawners",
    "unrestricted-vmm-executor",
    "jailed-vmm-executor",
    "either-vmm-executor",
    "metrics-extension",
    "http-vsock-extension",
    "grpc-vsock-extension",
    "link-local-extension",
    "snapshot-editor-extension",
]
default = []
# runtime
tokio-runtime = ["dep:tokio", "dep:tokio-util"]
# process spawner
process-spawner = []
direct-process-spawner = ["process-spawner"]
elevation-process-spawners = ["process-spawner"]
# vmm
vmm-arguments = []
vmm-installation = []
vmm-executor = ["vmm-arguments", "vmm-installation", "process-spawner"]
jailed-vmm-executor = ["vmm-executor"]
unrestricted-vmm-executor = ["vmm-executor"]
either-vmm-executor = ["unrestricted-vmm-executor", "jailed-vmm-executor"]
vmm-process = [
    "vmm-executor",
    "dep:hyper",
    "dep:bytes",
    "dep:http-body-util",
    "hyper-client-sockets/unix",
    "dep:hyper-util",
    "dep:http",
]
# other
vm = ["vmm-process", "dep:serde", "dep:serde_json"]
# extensions
metrics-extension = ["dep:serde", "dep:serde_json", "tokio/fs"]
http-vsock-extension = ["vm", "hyper-client-sockets/firecracker"]
grpc-vsock-extension = [
    "vm",
    "hyper-client-sockets/firecracker",
    "dep:tonic",
    "dep:tower-service",
]
link-local-extension = ["dep:cidr"]
snapshot-editor-extension = ["vmm-executor"]
