[package]
name = "fctools"
version = "0.6.0-alpha.2"
edition = "2021"
description = "An exhaustive, highly modular and extensible host SDK for the Firecracker microVM manager."
license = "MIT"
keywords = ["firecracker", "microvm", "sdk"]
categories = ["virtualization"]
repository = "https://github.com/kanpov/fctools"
readme = "README.md"
exclude = ["/testdata", ".gitattributes", ".gitignore", ".rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
debug = false
strip = "debuginfo"
panic = "abort"
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
strip = "symbols"

[profile.bench.build-override]
opt-level = 3
strip = "symbols"

[dependencies]
# runtime
futures-io = { version = "0.3.31", optional = true }
nix = { version = "0.29.0", features = [
    "user",
    "fs",
    "process",
    "signal",
], optional = true }
# tokio runtime
tokio-util = { version = "0.7.12", default-features = false, features = [
    "compat",
], optional = true }
tokio = { version = "1.41.1", default-features = false, features = [
    "rt",
    "process",
    "fs",
], optional = true }
# smol runtime
async-task = { version = "4.7.1", optional = true }
async-executor = { version = "1.13.1", optional = true }
async-io = { version = "2.4.0", optional = true }
async-process = { version = "2.3.0", optional = true }
async-fs = { version = "2.1.2", optional = true }
blocking = { version = "1.6.1", optional = true }
smol-hyper = { version = "0.1.1", optional = true }
pin-project-lite = { version = "0.2.15", optional = true }
# executor
futures-util = { version = "0.3.31", features = ["sink"], optional = true }
futures-channel = { version = "0.3.31", features = ["sink"], optional = true }
# process
async-once-cell = { version = "0.5.4", optional = true }
hyper = { version = "1.5.0", features = ["client"], optional = true }
bytes = { version = "1.8.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
hyper-client-sockets = { version = "0.4.0", optional = true, features = [
    "unix",
    "connector",
] }
hyper-util = { version = "0.1.10", features = [
    "client-legacy",
    "client",
    "http1",
], default-features = false, optional = true }
http = { version = "1.1.0", optional = true }
# vm
serde = { version = "1.0.214", features = ["derive"], optional = true }
serde_json = { version = "1.0.132", optional = true }
# extensions
cidr = { version = "0.3.0", optional = true }
tonic = { version = "0.12.3", optional = true, default-features = false, features = [
    "transport",
] }
tower-service = { version = "0.3.3", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
rand = "0.8.5"
tokio = { version = "1.39.2", features = ["macros"] }
uuid = { version = "1.10.0", features = ["v4"] }
which = "7.0.0"
fcnet-types = { version = "0.1.0", features = ["simple", "namespaced"] }
fcnet = { version = "0.6.0", features = ["simple", "namespaced"] }

fctools = { path = ".", features = ["full"] }
file-lock = "2.1.11"

[features]
full = [
    "tokio-runtime",
    "smol-runtime",
    "vm",
    "direct-process-spawner",
    "elevation-process-spawners",
    "unrestricted-vmm-executor",
    "jailed-vmm-executor",
    "either-vmm-executor",
    "metrics-extension",
    "http-vsock-extension",
    "grpc-vsock-extension",
    "link-local-extension",
    "snapshot-editor-extension",
]
default = []
# runtime
runtime = ["dep:futures-io", "dep:nix"]
tokio-runtime = [
    "runtime",
    "dep:tokio",
    "dep:tokio-util",
    "hyper-client-sockets/tokio-backend",
]
smol-runtime = [
    "dep:async-task",
    "dep:async-executor",
    "dep:async-io",
    "dep:async-process",
    "dep:async-fs",
    "dep:blocking",
    "hyper-client-sockets/async-io-backend",
    "dep:smol-hyper",
    "dep:pin-project-lite",
]
# process spawner
process-spawner = ["runtime"]
direct-process-spawner = ["process-spawner"]
elevation-process-spawners = ["process-spawner"]
# vmm
vmm-arguments = ["dep:nix"]
vmm-installation = ["dep:futures-util", "runtime"]
vmm-executor = [
    "vmm-arguments",
    "vmm-installation",
    "process-spawner",
    "dep:futures-channel",
]
jailed-vmm-executor = ["vmm-executor"]
unrestricted-vmm-executor = ["vmm-executor"]
either-vmm-executor = ["unrestricted-vmm-executor", "jailed-vmm-executor"]
vmm-process = [
    "vmm-executor",
    "dep:hyper",
    "dep:bytes",
    "dep:http-body-util",
    "dep:hyper-util",
    "dep:http",
    "dep:async-once-cell",
]
# other
vm = ["vmm-process", "dep:serde", "dep:serde_json"]
# extensions
metrics-extension = ["dep:serde", "dep:serde_json"]
http-vsock-extension = ["vm", "hyper-client-sockets/firecracker"]
grpc-vsock-extension = [
    "vm",
    "hyper-client-sockets/firecracker",
    "dep:tonic",
    "dep:tower-service",
]
link-local-extension = ["dep:cidr"]
snapshot-editor-extension = ["vmm-executor"]
